--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 	<title>Trend Meta Market</title>
 </head>
 <body>
-	<h1>...to will one thing.</h1>
+	<!-- <h1>...to will one thing.</h1> -->
 	<div id="root"></div>
 	<script type="module" src="./App.tsx"></script>
 </body>
